--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "eslint-plugin-simple-import-sort": "^8.0.0",
-    "react": "18.1.0",
-    "react-native": "0.70.3"
+    "react": "^18.2.0",
+    "react-dom": "^18.1.0",
+    "react-native": "0.70.3",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
