--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "axios": "0.27.2",
     "eslint-plugin-simple-import-sort": "^8.0.0",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.1.0",
     "react-native": "0.70.3",
+    "react-native-dotenv": "^3.3.1",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
