--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   },
   "dependencies": {
     "axios": "0.27.2",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.1.0",
     "react-native": "0.70.3",
     "react-native-dotenv": "^3.3.1",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
