--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "axios": "0.27.2",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
+    "axios": "0.27.2",
+    "email-validator": "^2.0.4",
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
