--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,6 @@
 
     /* Completeness */
     "skipLibCheck": true,                                 /* Skip type checking all .d.ts files. */
-    "noImplicitAny": false
+    "noImplicitAny": false,
   }
 }
