--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "email-validator": "^2.0.4",
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "jwt-decode": "^3.1.2",
+    "mobx": "^6.6.2",
+    "mobx-react": "^7.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.1.0",
     "react-native": "0.70.3",
